src/vitte/compiler/tests/diagnostics/borrowck/use_after_move.txt.snap
error[BORROW_E_USE_AFTER_MOVE]: value `value` used after move
  --> src/vitte/compiler/tests/diagnostics/borrowck/use_after_move.vit:3:6
   |
 2 | let moved = value
   |             ----- move happened here
 3 | give value
   |      ^^^^^ use after move is forbidden
   |
note: ownership moved at line 2 and the later use happens after that transfer
help: clone `value`, borrow it, or reinitialize it before the later use

Pipeline:
  lexer -> parser -> AST -> HIR -> sema -> borrowck [FAILED]
